mobile touchstart, touchend and flags to prevent mouseclick on mobile

--- a/stylesheets/scss/main.css
+++ b/stylesheets/scss/main.css
@@ -122,7 +122,16 @@
   #white7 {
     width: 14.28%; }
 
+  #white7 {
+    width: 14.28%; }
+
   #white8 {
+    width: 14.28%; }
+
+  #white8 {
+    width: 14.28%; }
+
+  #white9 {
     width: 14.28%; }
 
   #white9 {
@@ -131,10 +140,22 @@
   #white10 {
     width: 14.28%; }
 
+  #white10 {
+    width: 14.28%; }
+
+  #white11 {
+    width: 14.28%; }
+
   #white11 {
     width: 14.28%; }
 
   #white12 {
+    width: 14.28%; }
+
+  #white12 {
+    width: 14.28%; }
+
+  #white13 {
     width: 14.28%; }
 
   #white13 {
